<resources>
    <string name="app_name">Golden Couponz</string>
    <string name="preferred_language">Your preferred language?</string>
    <string name="preferred_country">Preferred country?</string>
    <string name="arabic_label">اللغة العربية</string>
    <string name="english_label">English</string>
    <string name="fav_language">لغتك المفضلة؟</string>
    <string name="fav_country">بلدك المفضلة؟</string>
    <string name="en_continue_label">Continue</string>
    <string name="ar_continue_label">متابعة</string>
    <string name="somethingwentwrongmessage">Something Went Wrong!</string>
    <string name="no_internet_message">No Internet Connection, Please check your Network!</string>
    <string name="stores_label">Stores</string>
    <string name="enjoy_strongest_discounts_offers">Enjoy the strongest range of discounts and offers</string>
    <string name="view_all">View all</string>
    <string name="find_store_you_want">Find the store you want</string>
    <string name="find_you_want">Find what you want</string>
    <string name="skip_label">Skip</string>
    <string name="best_store_deals">Best Store Deals</string>
    <string name="get_exclusive_coupon_and_offer">Get exclusive coupons and offers for your favorite stores</string>
    <string name="next_label">Next</string>
    <string name="ar_no_internet_message">لا يوجد اٍتصال بالأنترنت,  يرجى التحقق من الشبكة!</string>
    <string name="en_no_internet_message">No Internet Connection, Please check your Network!</string>
    <string name="products_label">Products</string>
    <string name="alerts_label">Alerts</string>
    <string name="follow_offer">Follow the offers of your stores</string>
    <string name="be_ready_for_alerts">Be ready to receive alerts and notifications for your favorite stores</string>
    <string name="disconts_products">Discounts on products</string>
    <string name="find_the_product_and_discount">Find the product you want and explore the applicable discounts</string>
    <string name="lets_start">Let\'s start</string>
    <string name="dont_miss">Don\'t miss anything</string>
    <string name="allow_notifications">Allow notifications from us to stay up to date on coupons and special offers or related to your favorite stores.</string>
    <string name="allow_alerts">Allow alerts</string>
    <string name="no_not_now">No not now</string>
    <string name="new_coupon_favorite">New coupon on your favorite store</string>
    <string name="click_to_open">Click to open</string>
    <string name="three_hours_ago">3 hours ago</string>
    <string name="right_offers_dont_miss">Right Offers Don\'t Miss</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="forget_password_question">Forgot your password?</string>
    <string name="dont_have_account_question">Don\'t have an account</string>
    <string name="create_new_account">Create a new account</string>
    <string name="forget_password">Forgot your password</string>
    <string name="enter_email_registered">Enter the email registered in the account to receive the password change message</string>
    <string name="send_label">Send</string>
    <string name="password_rest">Password reset link sent</string>
    <string name="we_sent_password">We have sent a password reset link to your email, if you can\'t find the email try to check your spam or trash folder</string>
    <string name="done_label">Done</string>
    <string name="create_account">Create an account</string>
    <string name="enter_data_for_new_account">Enter the following data carefully to create a new account</string>
    <string name="user_name">User name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="country_label">Country</string>
    <string name="confirm_email">Confirm e-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_label">Create</string>
    <string name="or_label">OR</string>
    <string name="thereisanerrorwiththedata">There is an error with the data</string>
    <string name="entervalidemail">Enter valid email</string>
    <string name="lessthan8letters">password can\'t be less than 8 letters</string>
    <string name="theemailhasalreadybeentaken">The email has already been taken</string>
    <string name="entervalidphone">Enter valid PhoneNumber</string>
    <string name="enterphone">Enter PhoneNumber</string>
    <string name="chooseCode">Choose your Country Code</string>
    <string name="enterurname">Enter your name</string>
    <string name="enterpassword">Enter password</string>
    <string name="passwordsdoesntmatch">Passwords doesn\'t match</string>
    <string name="emailsdoesntmatch">Emails doesn\'t match</string>
    <string name="account_label">My Account</string>
    <string name="sign_in_and_save_offers">Sign in and save your favorite stores, follow the most important offers and always be in touch</string>
    <string name="sign_in_sign_up">Sign in / Sign up</string>
    <string name="support_us">Support us</string>
    <string name="rate_us_app_store">Rate us in the App Store</string>
    <string name="app_settings">Application settings</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="language_label">Language</string>
    <string name="about_label">About Golden Couponz</string>
    <string name="edit_profile">Edit profile</string>
    <string name="who_we_are">Who we are?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>
    <string name="application_lang">Application language</string>
    <string name="edit_account_info">Edit account information</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="save_label">Save</string>
    <string name="forget_password_change_question">Forgot your current password?</string>
    <string name="successfulyupdate">Successfully Updated</string>
    <string name="changepassworddone">change password done</string>
    <string name="oldpasswordisincorret">Old password is incorrect</string>
    <string name="oldPasswordAsNew">New Password cannot be same as your current password</string>
    <string name="all_label">All</string>
    <string name="coupons_for_count_label">Coupons:</string>
    <string name="favorite_label">Favorite</string>
    <string name="coupons_label">Coupons</string>
    <string name="product_offers">Product offers</string>
    <string name="get_the_offer">Get the offer now</string>
    <string name="last_used_from">Last used from</string>
    <string name="copy_the_coupon">Copy the coupon</string>
    <string name="copied_label">copied</string>
    <string name="time">time</string>
    <string name="copy_the_code">Copy the code and go to buy the product</string>
    <string name="learn_how">Learn how to use the coupon!</string>
    <string name="follow_us">Follow us on social media</string>
    <string name="how_was_experiance">How was your experience?</string>
    <string name="is_coupon_active_question">Is the coupon active?</string>
    <string name="yes_active">Yes active</string>
    <string name="didnt_work">No it didn\'t work</string>
    <string name="thank_you">Thank you</string>
    <string name="recommend_up">Recommend us to others by rating us on the App Store</string>
    <string name="rate_us">Rate us now</string>
    <string name="no_thank_you">No thank you</string>
    <string name="code_copy">Code Copied Successfully</string>
    <string name="share_msg_part1">Get a big discount using the discount code</string>
    <string name="share_msg_part2">when ordering from</string>
    <string name="share_via">Share Via</string>
    <string name="click_link">To use the coupon, click on the following link</string>
    <string name="sure_log_out">Are you sure you want to log out of the application?</string>
    <string name="cancel_label">Cancel</string>
    <string name="must_be_sing_in">You must be sign in</string>
    <string name="nothing_coupons_added">Nothing has been added to your favourites yet Choose your favorite coupons to find them in one place</string>
    <string name="nothing_offers_added">Nothing has been added to your favourites yet Choose your favorite stores to find them in one place</string>
    <string name="create_account_active_list">Create your account to activate the list of your favorite stores to be able to receive special notifications</string>
    <string name="current_price">Current price</string>
    <string name="price_after">Price after using the coupon</string>
    <string name="copy_code_go_to_store">Copy the code, go to the store, add the product to the basket, and enter the code to get the discount</string>
    <string name="copy_code_and_buy">Copy the code and go to buy the product</string>
    <string name="go_buy_product_now">Go buy the product now</string>
    <string name="exclusive_offers">Exclusive Offers</string>
    <string name="update_to_latest_version">The current version of the application is no longer supported, the application must be updated to the latest version</string>
    <string name="app_must_updated">The app must be updated</string>
    <string name="update_now">Update now</string>
    <string name="your_favorite_store">Your favorite stores</string>
    <string name="choose_favorite_store">Choose your favorite stores to be aware of their discount codes first</string>
    <string name="this_coupon">This Coupon</string>
    <string name="not_vaild">is not valid for the store</string>
    <string name="whatsapp_connect">WhatsApp contact</string>
    <string name="notification_label">Notifications</string>
    <string name="no_notifications">No notifications received yet!!</string>
    <string name="previous_research">Previous research</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_acc">Delete Account</string>
    <string name="delte_acc_details">This Will permanently erase your account details.</string>
    <string name="delete_my_acc">Delete My Account</string>
    <string name="account_deleted">Account deleted.</string>
    <string name="server_client_id">893608938454-09j32o2ga3uvjoimmndh5scu0a8tlacd.apps.googleusercontent.com</string>
    <string name="facebook_app_id">793586418366637</string>
    <string name="fb_login_protocol_scheme">fb793586418366637</string>
    <string name="facebook_client_token">2564a181d066a2e16ed46a254df79068</string>
    <string name="most_common">The most common</string>
    <string name="most_disconted">The most discounted</string>
    <string name="sort_by">Sort by</string>
    <string name="price_heighst">Price from high to low</string>
    <string name="price_lowest">Price from lowest to highest</string>
    <string name="back_twice">Please click BACK again to exit</string>
    <string name="rest_label">Reset</string>
    <string name="filter_by">Filter by</string>
    <string name="store_label">Store</string>
    <string name="trade_mark">Trade mark</string>
    <string name="perform_label">Perform</string>
    <string name="update_downloaded">to use this app,download the latest version</string>
    <string name="restart">Update</string>
    <string name="mail_not_found">Sorry, this account does not contain an email !</string>
</resources>