<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    android:background="@drawable/bk_dialog"
    android:orientation="vertical">
<ImageView
    android:padding="@dimen/_16sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_star"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textFontWeight="1000"
        android:textStyle="bold" />
    <TextView
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/recommend_up"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textFontWeight="00"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/yesId"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/bk_button"
        android:gravity="center"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/rate_us"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/noId"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/bk_notification_layout"
        android:gravity="center"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/no_thank_you"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold" />
</LinearLayout>