<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/slider_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_notification_alarm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/secondTextId"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                android:text="@string/dont_miss" />

            <TextView
                android:id="@+id/thirdTextId"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/allow_notifications" />

        </LinearLayout>

        <TextView
            android:id="@+id/allowAlertId"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/bk_button"
            android:gravity="center"
            android:text="@string/allow_alerts"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notNowId"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:gravity="center"
            android:text="@string/no_not_now"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</layout>
