<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.goldencouponz.fragments.UpdateFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/ic_update_app"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="@dimen/_112sdp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/change_logo"
                    android:background="@drawable/ic_bk_logo"
                    android:layout_gravity="center"
                    android:layout_marginBottom="18dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_must_updated"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginBottom="38dp"
                    android:textFontWeight="700"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20sdp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="@dimen/_24sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_now"
                    android:textSize="@dimen/_16sdp"
                    android:gravity="center"
                    style="@style/ButtonStyle"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:textFontWeight="1000"
                    android:background="@drawable/bk_button"
                    android:textAlignment="center"/>

            </LinearLayout>



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_to_latest_version"
            android:textFontWeight="400"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

    </RelativeLayout>

</layout>